--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.141",
     "@mui/material": "^5.14.6",
@@ -29,9 +30,11 @@
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.1.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.4.2",
+    "react-modal": "^3.16.3",
     "react-on-screen": "^2.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.4",
